<resources>
    <string name="app_name">Tree Manager</string>

   <!--// Login Activity String -->

    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>

    <string name="forgot_txt">Forgot </string>
    <string name="cant_sign_in_txt">Can\u0027t Sign in? </string>
    <string name="help_center_txt">Help Center</string>
    <string name="sign_in_txt">Sign IN</string>



    <!--//Login Validation String -->
    <string name="username_isEmpty">Enter your Username</string>
    <string name="password_isEmpty">Enter your Valid Password</string>
    <string name="username_password_isEmpty">Invalid Username/Password \n Try Again.</string>




    <!--// ForgotPasswordActivity Activity String -->
    <string name="email_hint">Email </string>
    <string name="forgotpassword_txt">Forgot Password</string>
    <string name="forgotpassword_txt_content">Please enter your registered email address and we will send link to rest your password.</string>
    <string name="send_link">Send Link</string>



    <!--//ForgotPasswordActivity Validation String -->
    <string name="email_isEmpty">Enter your Email Address</string>



    <!--// Dialogbox Error  String -->

     <string name="oops">OOPS !</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="cancel">Cancel</string>


    <!--//HelpCenter Activity Validation String -->

    <string name="playvideo">Play Video for Demo</string>

    <string name="playvideo_content_one">Contact Enviro - Australia</string>

    <string name="playvideo_content_two">Contact Enviro - New Zealand</string>


</resources>
