<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">





       <RelativeLayout
        android:id="@+id/center_relativelayout"
        android:layout_width="match_parent"
        android:background="@drawable/bg_white"
        android:layout_margin="@dimen/_20sdp"
        android:layout_height="@dimen/_150sdp">

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/oops"
            android:layout_above="@+id/view_center"
            android:gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp" />


        <View
            android:id="@+id/view_center"
            android:layout_width="match_parent"
            android:background="@color/color_black"
            android:layout_margin="@dimen/_15sdp"
            android:layout_centerInParent="true"
            android:layout_height="0.5dp"></View>

        <TextView
            android:id="@+id/message_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/forgotpassword_txt"
            android:layout_below="@+id/view_center"
            android:gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_18sdp" />




    </RelativeLayout>

        <ImageView
        android:id="@+id/imageView_help_center"
        android:layout_width="@dimen/_31sdp"
        android:layout_height="@dimen/_31sdp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_below="@+id/center_relativelayout"
        android:layout_above="@+id/cancel_txt"
        android:src="@drawable/ic_cancel" />


        <TextView
        android:id="@+id/cancel_txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/cancel"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_18sdp" />


</LinearLayout>