<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_img"
    android:layout_height="match_parent"
    tools:context=".Activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_treemanager" />




       <LinearLayout
           android:layout_width="match_parent"
           android:layout_below="@+id/imageView"
           android:layout_above="@+id/bottom_layout"
           android:orientation="vertical"
           android:layout_height="match_parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:gravity="center"
               android:layout_height="wrap_content">

               <!-- ICON -->
               <ImageView
                   android:layout_width="@dimen/_24sdp"
                   android:layout_height="@dimen/_24sdp"
                   android:src="@drawable/locker_open" />


               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/opensans_bold"
                   android:text="@string/forgotpassword_txt"
                   android:layout_gravity="center"
                   android:textColor="@color/color_black"
                   android:textSize="@dimen/_22sdp" />


           </LinearLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/opensans_regular"
               android:text="@string/forgotpassword_txt_content"
               android:layout_gravity="center"
               android:layout_margin="@dimen/_10sdp"
               android:textColor="@color/color_dark_green"
               android:textSize="@dimen/_18sdp" />

           <!-- Email INPUT -->
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:gravity="left">

               <!-- INPUT -->
               <EditText
                   android:id="@+id/email_input"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"
                   android:layout_toRightOf="@+id/email_icon"
                   android:layout_centerInParent="true"
                   android:background="@android:color/transparent"
                   android:fontFamily="@font/opensans_regular"
                   android:inputType="textEmailAddress"
                   android:hint="@string/email_hint"
                   android:text=""
                   android:textSize="@dimen/_18sdp" />

               <!-- ICON -->
               <ImageView
                   android:id="@+id/email_icon"
                   android:layout_width="@dimen/_24sdp"
                   android:layout_height="@dimen/_24sdp"
                   android:layout_centerInParent="true"
                   android:layout_marginLeft="@dimen/_19sdp"
                   android:layout_gravity="center"
                   android:src="@drawable/ic_email_img" />

           </RelativeLayout>

           <View
               android:layout_width="match_parent"
               android:background="@color/color_black"
               android:layout_marginTop="@dimen/_5sdp"
               android:layout_marginLeft="@dimen/_20sdp"
               android:layout_marginRight="@dimen/_20sdp"
               android:layout_marginBottom="@dimen/_20sdp"
               android:layout_height="0.5dp"></View>


           <Button
               android:layout_width="match_parent"
               android:layout_margin="@dimen/_30sdp"
               android:text="@string/send_link"
               android:textColor="@color/color_white"
               android:textSize="@dimen/_18sdp"
               android:id="@+id/button_sendlink"
               android:textAllCaps="true"
               android:background="@drawable/button_click"
               android:layout_height="@dimen/_50sdp" />


       </LinearLayout>


    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentBottom="true"
        android:gravity="center">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/lbottom"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_10sdp">


            <ImageView
                android:id="@+id/imageView_help_center"
                android:layout_width="@dimen/_21sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_help_center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/help_center_txt"
                android:layout_gravity="center"
                android:textColor="@color/color_dark_green"
                android:textSize="@dimen/_18sdp" />


        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>